# ourcode-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml  release.yml  test.yml
agents/: codebase-summarizer.md
cli/: profile.py  projects.py
commands/: ourcode-login.md  ourcode-submit.md  ourcode-summarize.md
docs/implementation-plans/2026-02-24-match-ux-listing-types/: phase_06.md  test-requirements.md
docs/test-plans/: 2026-02-24-match-ux-listing-types.md
skills/ourcode-account/: SKILL.md
skills/ourcode-login/: SKILL.md
skills/ourcode-setup/: SKILL.md
skills/ourcode-submit/: SKILL.md
skills/ourcode-summarize/: SKILL.md
src/cli/: auth.py  client.py  intros.py  main.py  matches.py  profile.py  projects.py  update_check.py
tests/: test_auth.py  test_client.py  test_commands.py  test_update_check.py
