[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "ourcode"
version = "0.1.2"
description = "CLI for OurCode — find developers working on similar projects"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx==0.27.0",
    "typer==0.24.0",
]

[project.scripts]
ourcode = "cli.main:main"

[project.urls]
Homepage = "https://our-code-production.up.railway.app"
Repository = "https://github.com/djontology/ourcode-plugin"

[tool.uv.build-backend]
module-name = "cli"

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
build_command = "uv build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
